--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
 	"name": "agent-tool-protocol",
 	"version": "1.0.0",
 	"private": true,
-	"packageManager": "yarn@4.1.1+sha256.f3cc0eda8e5560e529c7147565b30faa43b4e472d90e8634d7134a37c7f59781",
 	"workspaces": [
 		"packages/*",
 		"examples/*"
@@ -26,13 +25,21 @@
 		"lint:check": "prettier --check \"**/*.{ts,tsx,md,json}\"",
 		"clean": "nx run-many -t clean",
 		"format": "prettier --write \"**/*.{ts,tsx,md,json}\"",
-		"graph": "nx graph"
+		"graph": "nx graph",
+		"prepare": "husky",
+		"prepare:release": "nx release --first-release --skip-publish"
 	},
 	"devDependencies": {
+		"@commitlint/cli": "^20.1.0",
+		"@commitlint/config-conventional": "^20.0.0",
+		"@nx/js": "20.8.2",
 		"@opentelemetry/api": "^1.9.0",
 		"@opentelemetry/sdk-metrics": "^2.2.0",
 		"@opentelemetry/sdk-trace-base": "^2.2.0",
 		"@opentelemetry/sdk-trace-node": "^2.2.0",
+		"@swc-node/register": "~1.9.1",
+		"@swc/core": "~1.5.7",
+		"@swc/helpers": "~0.5.11",
 		"@types/jest": "^29.5.14",
 		"@types/node": "^22.10.2",
 		"@typescript-eslint/eslint-plugin": "^8.46.2",
@@ -40,6 +47,7 @@
 		"eslint": "^9.38.0",
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-prettier": "^5.5.4",
+		"husky": "^9.1.7",
 		"jest": "^29.7.0",
 		"nx": "^20.4.1",
 		"prettier": "^3.4.2",
