--- a/examples/client-tools/package.json
+++ b/examples/client-tools/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "atp-client-tools-example",
 	"version": "1.0.0",
+	"private": true,
 	"description": "Example of client-provided tools in Agent Tool Protocol",
 	"type": "module",
 	"scripts": {
