--- a/examples/langchain-react-agent/package.json
+++ b/examples/langchain-react-agent/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "langchain-react-agent-example",
 	"version": "1.0.0",
+	"private": true,
 	"description": "Production-ready LangChain React Agent with ATP integration",
 	"type": "module",
 	"scripts": {
