fix: release-pipeline

--- a/nx.json
+++ b/nx.json
@@ -21,9 +21,7 @@
 			"cache": false
 		},
 		"nx-release-publish": {
-			"dependsOn": [
-				"build"
-			]
+			"dependsOn": ["build"]
 		}
 	},
 	"namedInputs": {
