--- a/packages/runtime/project.json
+++ b/packages/runtime/project.json
@@ -3,6 +3,9 @@
 	"$schema": "../../node_modules/nx/schemas/project-schema.json",
 	"sourceRoot": "packages/runtime/src",
 	"projectType": "library",
+	"tags": [
+		"atp-core"
+	],
 	"targets": {
 		"build": {
 			"executor": "nx:run-commands",
