--- a/packages/atp-compiler/package.json
+++ b/packages/atp-compiler/package.json
@@ -41,8 +41,8 @@
 		"nanoid": "^5.0.0"
 	},
 	"peerDependencies": {
-		"@mondaydotcomorg/atp-protocol": "workspace:*",
-		"@mondaydotcomorg/atp-runtime": "workspace:*"
+		"@mondaydotcomorg/atp-protocol": "0.17.13",
+		"@mondaydotcomorg/atp-runtime": "0.17.13"
 	},
 	"devDependencies": {
 		"@stryker-mutator/core": "^8.0.0",
