--- a/packages/langchain/package.json
+++ b/packages/langchain/package.json
@@ -32,8 +32,8 @@
 	"license": "MIT",
 	"dependencies": {
 		"@langchain/core": "^0.3.78",
-		"@mondaydotcomorg/atp-client": "workspace:*",
-		"@mondaydotcomorg/atp-protocol": "workspace:*",
+		"@mondaydotcomorg/atp-client": "0.17.13",
+		"@mondaydotcomorg/atp-protocol": "0.17.13",
 		"json-schema-to-zod": "^2.6.1",
 		"langchain": "^0.3.35",
 		"zod": "^4.1.11"
