--- a/packages/mcp-adapter/package.json
+++ b/packages/mcp-adapter/package.json
@@ -33,8 +33,8 @@
 	"license": "MIT",
 	"dependencies": {
 		"@modelcontextprotocol/sdk": "^0.5.0",
-		"@mondaydotcomorg/atp-protocol": "workspace:*",
-		"@mondaydotcomorg/atp-server": "workspace:*",
+		"@mondaydotcomorg/atp-protocol": "0.17.13",
+		"@mondaydotcomorg/atp-server": "0.17.13",
 		"zod": "^4.1.11"
 	},
 	"devDependencies": {
