--- a/packages/protocol/package.json
+++ b/packages/protocol/package.json
@@ -31,7 +31,7 @@
 	],
 	"license": "MIT",
 	"dependencies": {
-		"@mondaydotcomorg/atp-provenance": "workspace:*",
+		"@mondaydotcomorg/atp-provenance": "0.17.13",
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
