--- a/packages/providers/package.json
+++ b/packages/providers/package.json
@@ -18,7 +18,7 @@
 		"test": "vitest run"
 	},
 	"dependencies": {
-		"@mondaydotcomorg/atp-protocol": "workspace:*"
+		"@mondaydotcomorg/atp-protocol": "0.17.13"
 	},
 	"devDependencies": {
 		"typescript": "^5.7.2"
