--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -33,6 +33,7 @@
 	],
 	"license": "MIT",
 	"dependencies": {
+		"ioredis": "^5.8.0",
 		"node-cache": "*",
 		"pino": "*",
 		"pino-pretty": "*",
@@ -46,13 +47,5 @@
 		"tsx": "^4.7.0",
 		"typescript": "^5.3.3",
 		"vitest": "^1.2.1"
-	},
-	"peerDependencies": {
-		"ioredis": "^5.8.0"
-	},
-	"peerDependenciesMeta": {
-		"ioredis": {
-			"optional": true
-		}
 	}
 }
