--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -36,10 +36,10 @@
 		"@babel/parser": "^7.26.0",
 		"@babel/traverse": "^7.26.0",
 		"@babel/types": "^7.26.0",
-		"@mondaydotcomorg/atp-compiler": "workspace:*",
-		"@mondaydotcomorg/atp-protocol": "workspace:*",
-		"@mondaydotcomorg/atp-provenance": "workspace:*",
-		"@mondaydotcomorg/atp-runtime": "workspace:*",
+		"@mondaydotcomorg/atp-compiler": "0.17.13",
+		"@mondaydotcomorg/atp-protocol": "0.17.13",
+		"@mondaydotcomorg/atp-provenance": "0.17.13",
+		"@mondaydotcomorg/atp-runtime": "0.17.13",
 		"@opentelemetry/api": "^1.9.0",
 		"@opentelemetry/auto-instrumentations-node": "^0.66.0",
 		"@opentelemetry/core": "^2.2.0",
