fix: release-pipeline

--- a/.github/workflows/publish-atp.yml
+++ b/.github/workflows/publish-atp.yml
@@ -64,6 +64,10 @@ jobs:
         run: yarn build
         shell: bash
 
+      - name: Check for publishable changes
+        run: yarn nx release version --dry-run
+        shell: bash
+
       - name: Publish packages (DRY RUN)
         run: yarn nx release publish --dry-run
         shell: bash
