--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -39,6 +39,7 @@
 		"@mondaydotcomorg/atp-compiler": "0.17.15",
 		"@mondaydotcomorg/atp-protocol": "0.17.15",
 		"@mondaydotcomorg/atp-provenance": "0.17.15",
+		"@mondaydotcomorg/atp-providers": "0.17.15",
 		"@mondaydotcomorg/atp-runtime": "0.17.15",
 		"@opentelemetry/api": "^1.9.0",
 		"@opentelemetry/auto-instrumentations-node": "^0.66.0",
