--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
 		"@typescript-eslint/parser": "^8.46.2",
 		"eslint": "^9.38.0",
 		"eslint-config-prettier": "^10.1.8",
+		"eslint-import-resolver-typescript": "^4.4.4",
+		"eslint-plugin-import": "^2.32.0",
 		"eslint-plugin-prettier": "^5.5.4",
 		"husky": "^9.1.7",
 		"jest": "^29.7.0",
@@ -53,7 +55,8 @@
 		"prettier": "^3.4.2",
 		"ts-jest": "^29.2.5",
 		"tsx": "^4.19.2",
-		"typescript": "^5.7.2"
+		"typescript": "^5.7.2",
+		"typescript-eslint": "^8.46.4"
 	},
 	"dependencies": {
 		"@langchain/anthropic": "^0.3.7",
