--- a/packages/atp-compiler/package.json
+++ b/packages/atp-compiler/package.json
@@ -38,6 +38,10 @@
 		"@babel/parser": "^7.26.0",
 		"@babel/traverse": "^7.26.0",
 		"@babel/types": "^7.26.0",
+		"@mondaydotcomorg/atp-protocol": "0.17.15",
+		"@mondaydotcomorg/atp-runtime": "0.17.15",
+		"@types/babel__generator": "^7.6.0",
+		"@types/babel__traverse": "^7.20.0",
 		"nanoid": "^5.0.0"
 	},
 	"peerDependencies": {
@@ -46,8 +50,6 @@
 	},
 	"devDependencies": {
 		"@stryker-mutator/core": "^8.0.0",
-		"@types/babel__generator": "^7.6.0",
-		"@types/babel__traverse": "^7.20.0",
 		"@types/jest": "^29.5.0",
 		"fast-check": "^3.15.0",
 		"jest": "^29.7.0",
