--- a/packages/providers/package.json
+++ b/packages/providers/package.json
@@ -18,7 +18,8 @@
 		"test": "vitest run"
 	},
 	"dependencies": {
-		"@mondaydotcomorg/atp-protocol": "0.17.15"
+		"@mondaydotcomorg/atp-protocol": "0.17.15",
+		"@opentelemetry/api": "^1.9.0"
 	},
 	"devDependencies": {
 		"typescript": "^5.7.2"
