--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -50,6 +50,13 @@
 		"@opentelemetry/sdk-node": "^0.207.0",
 		"@opentelemetry/semantic-conventions": "^1.37.0",
 		"@types/acorn": "^6.0.4",
+		"@types/babel__generator": "^7.6.8",
+		"@types/babel__traverse": "^7.20.5",
+		"@types/escodegen": "^0.0.10",
+		"@types/js-yaml": "^4.0.9",
+		"@types/jsonwebtoken": "^9.0.5",
+		"acorn": "^8.11.0",
+		"acorn-walk": "^8.3.0",
 		"isolated-vm": "5.0.4",
 		"js-yaml": "^4.1.0",
 		"jsonwebtoken": "^9.0.2",
@@ -57,11 +64,6 @@
 		"rate-limiter-flexible": "*"
 	},
 	"devDependencies": {
-		"@types/babel__generator": "^7.6.8",
-		"@types/babel__traverse": "^7.20.5",
-		"@types/escodegen": "^0.0.10",
-		"@types/js-yaml": "^4.0.9",
-		"@types/jsonwebtoken": "^9.0.5",
 		"@types/node": "^20.11.5",
 		"typescript": "^5.3.3",
 		"vitest": "^1.2.1"
