--- a/packages/mcp-adapter/package.json
+++ b/packages/mcp-adapter/package.json
@@ -15,6 +15,9 @@
 		"dist",
 		"src"
 	],
+	"publishConfig": {
+		"access": "public"
+	},
 	"scripts": {
 		"build": "tsc -p tsconfig.json",
 		"dev": "tsc -p tsconfig.json --watch",
@@ -33,7 +36,7 @@
 	"license": "MIT",
 	"dependencies": {
 		"@modelcontextprotocol/sdk": "^0.5.0",
-		"@mondaydotcomorg/atp-protocol": "0.17.15",
+		"@mondaydotcomorg/atp-protocol": "0.17.16",
 		"@mondaydotcomorg/atp-server": "0.17.16",
 		"zod": "^4.1.11"
 	},
