--- a/packages/protocol/package.json
+++ b/packages/protocol/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@mondaydotcomorg/atp-protocol",
-	"version": "0.17.15",
+	"version": "0.17.16",
 	"description": "Core protocol types and interfaces for Agent Tool Protocol",
 	"type": "module",
 	"main": "./dist/index.js",
@@ -31,8 +31,11 @@
 	],
 	"license": "MIT",
 	"dependencies": {
-		"@mondaydotcomorg/atp-provenance": "0.17.15",
+		"@mondaydotcomorg/atp-provenance": "0.17.16",
 		"zod": "^3.23.8"
+	},
+	"publishConfig": {
+		"access": "public"
 	},
 	"devDependencies": {
 		"typescript": "^5.3.3",
