--- a/packages/provenance/package.json
+++ b/packages/provenance/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@mondaydotcomorg/atp-provenance",
-	"version": "0.17.15",
+	"version": "0.17.16",
 	"description": "CAMEL-inspired provenance security for LLM applications - track data origin and enforce security policies",
 	"main": "./dist/index.js",
 	"types": "./dist/index.d.ts",
@@ -10,6 +10,9 @@
 			"types": "./dist/index.d.ts",
 			"import": "./dist/index.js"
 		}
+	},
+	"publishConfig": {
+		"access": "public"
 	},
 	"files": [
 		"dist",
