--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -15,6 +15,11 @@
 			"import": "./dist/core/index.js"
 		}
 	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/your-org/agent-tool-protocol.git",
+		"directory": "packages/client"
+	},
 	"files": [
 		"dist",
 		"src"
