--- a/packages/mcp-adapter/package.json
+++ b/packages/mcp-adapter/package.json
@@ -11,6 +11,11 @@
 			"import": "./dist/index.js"
 		}
 	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/your-org/agent-tool-protocol.git",
+		"directory": "packages/mcp-adapter"
+	},
 	"files": [
 		"dist",
 		"src"
