fix: repository urls v2

--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -19,7 +19,9 @@
 		"access": "public"
 	},
 	"repository": {
-		"url": "https://github.com/mondaycom/agent-tool-protocol"
+		"type": "git",
+		"url": "https://github.com/mondaycom/agent-tool-protocol",
+		"directory": "packages/runtime"
 	},
 	"scripts": {
 		"build": "npm run generate:metadata && tsc -p tsconfig.json",
