--- a/packages/langchain/package.json
+++ b/packages/langchain/package.json
@@ -17,7 +17,7 @@
 	],
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/your-org/agent-tool-protocol.git",
+		"url": "https://github.com/mondaycom/agent-tool-protocol",
 		"directory": "packages/langchain"
 	},
 	"publishConfig": {
