--- a/packages/protocol/package.json
+++ b/packages/protocol/package.json
@@ -31,7 +31,7 @@
 	],
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/your-org/agent-tool-protocol.git",
+		"url": "https://github.com/mondaycom/agent-tool-protocol",
 		"directory": "packages/protocol"
 	},
 	"license": "MIT",
