--- a/packages/provenance/package.json
+++ b/packages/provenance/package.json
@@ -48,7 +48,7 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/your-org/agent-tool-protocol.git",
+		"url": "https://github.com/mondaycom/agent-tool-protocol",
 		"directory": "packages/provenance"
 	}
 }
