--- a/packages/providers/package.json
+++ b/packages/providers/package.json
@@ -19,7 +19,7 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/your-org/agent-tool-protocol.git",
+		"url": "https://github.com/mondaycom/agent-tool-protocol",
 		"directory": "packages/providers"
 	},
 	"publishConfig": {
