--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -25,7 +25,7 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/your-org/agent-tool-protocol.git",
+		"url": "https://github.com/mondaycom/agent-tool-protocol",
 		"directory": "packages/server"
 	},
 	"keywords": [
