--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -44,6 +44,7 @@
 	"license": "MIT",
 	"dependencies": {
 		"@mondaydotcomorg/atp-protocol": "0.17.16",
+		"@mondaydotcomorg/atp-runtime": "0.17.16",
 		"undici": "*",
 		"zod": "^3.23.8",
 		"zod-to-json-schema": "^3.24.6"
