--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -18,8 +18,5 @@
 	},
 	"include": ["src/**/*"],
 	"exclude": ["node_modules", "dist", "**/*.test.ts"],
-	"references": [
-		{ "path": "../protocol" },
-		{ "path": "../runtime" }
-	]
+	"references": [{ "path": "../protocol" }, { "path": "../runtime" }]
 }
