--- a/packages/mcp-adapter/project.json
+++ b/packages/mcp-adapter/project.json
@@ -3,9 +3,7 @@
 	"$schema": "../../node_modules/nx/schemas/project-schema.json",
 	"sourceRoot": "packages/mcp-adapter/src",
 	"projectType": "library",
-	"tags": [
-		"atp-core"
-	],
+	"tags": ["atp-core"],
 	"targets": {
 		"build": {
 			"executor": "nx:run-commands",
